--- a/tests/utilities_test/CMakeLists.txt
+++ b/tests/utilities_test/CMakeLists.txt
@@ -34,4 +34,5 @@ add_executable(
         ../../src/transport_protocols/transport_control/utilities/packet_window.cpp
         utilities_tests.cpp
         test.cpp
+        ../../src/transport_packet/
         ${SRC_FILES})
